--- a/app/components/Wallet/styles.css
+++ b/app/components/Wallet/styles.css
@@ -1,7 +1,8 @@
 /* Window Controls */
 
 .window-controls {
-    height: 25px !important;
+    height: 27px !important;
+    padding: 2px;
 }
 
 .window-controls .window-controls-drag {
@@ -30,7 +31,9 @@
 
 .window-controls .maximize svg,
 .window-controls .unmaximize svg {
-    width: 15px;
+    position: relative;
+    top: 2px;
+    width: 13px;
     transform: rotate(90deg);
 }
 
@@ -66,8 +69,16 @@
 .ant-tabs-tab {
     position: relative;
     color: #ccc;
-    width: 55.9%;
+    width: 25%;
     text-align: center;
+}
+
+.ant-tabs-nav .ant-tabs-tab {
+    margin: 0;
+}
+
+.ant-tabs-nav {
+    width:100%;
 }
 
 .ant-tabs-nav .ant-tabs-tab:hover {
